# Aelyra

./: .env  .env.example  .env.prod  .gitignore  .replit  CLAUDE.md  README.md  alembic.ini  deploy-production.sh  install-ca.sh  launch-dev.sh  launch-prod.sh  main.py  package-lock.json  playmaker.db  prod-deploy-plan .txt  pyproject.toml  requirements.txt  testpy.py
.config/: config.json  system_prompt.json  user_prompt.json
alembic/: env.py
alembic/versions/: 1d44e78f7caa_create_users_table.py  8c3fb52190cb_add_playlist_history_and_tracks_tables.py
app/: database.py
app/models/: __init__.py  playlist_history.py  requests.py  responses.py  user.py
app/routers/: auth.py  playlist.py
app/services/: openai_service.py  playlist_history_service.py  spotify_service.py  user_service.py
attached_assets/: Pasted--CLAUDE-md-This-file-provides-guidance-to-Claude-Code-claude-ai-code-when-working-with-code-in-t-1750685525605_1750685525605.txt
certs/: localhost+2-key.pem  localhost+2.pem
frontend/: .env  index.html  jest.config.js  package-lock.json  package.json  re-init.sh  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js  index.css
frontend/src/components/: PlaylistGenerator.js  PlaylistHistory.js  SkeletonLoader.js  SpotifyAuth.js  UserProfile.js
utils/: enable-maintenance.sh
